# doc-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  doc-agent.config.json.example  foundry-eval.config.json.example  jtbd-template.csv  pyproject.toml
.claude/: settings.json  settings.local.json
src/doc_agent/: __init__.py  __main__.py
src/doc_agent/cli/: __init__.py  main.py
src/doc_agent/config/: __init__.py  defaults.py  loader.py  models.py
src/doc_agent/context/: __init__.py  jtbd_loader.py  metadata_extractor.py  samples_index.py  toc_parser.py
src/doc_agent/evaluators/: __init__.py  article.py  base.py  code_samples.py  jtbd.py
src/doc_agent/gui/: __init__.py  app.py  launcher.py
src/doc_agent/jobs/: __init__.py  manager.py  models.py  worker.py
src/doc_agent/llm/: __init__.py  claude.py  factory.py  ollama.py  protocol.py  response_parser.py
src/doc_agent/llm/prompts/: __init__.py  article_eval.py  code_review.py
src/doc_agent/models/: __init__.py  article.py  enums.py  evaluation.py
src/doc_agent/orchestration/: __init__.py  batch_processor.py  progress.py  runner.py  state.py
src/doc_agent/output/: __init__.py  csv_writer.py  markdown_writer.py
src/doc_agent/output/templates/: report.md.j2
src/doc_agent/utils/: __init__.py  file_utils.py  logging.py
src/foundry_eval/: __init__.py  __main__.py
src/foundry_eval/cli/: __init__.py  main.py
src/foundry_eval/config/: __init__.py  defaults.py  loader.py  models.py
src/foundry_eval/context/: __init__.py  include_resolver.py  jtbd_loader.py  metadata_extractor.py  samples_index.py  toc_parser.py
src/foundry_eval/evaluators/: __init__.py  article.py  base.py  code_samples.py  jtbd.py
src/foundry_eval/llm/: __init__.py  claude.py  factory.py  response_parser.py
src/foundry_eval/llm/prompts/: __init__.py  article_eval.py  jtbd_analysis.py
src/foundry_eval/models/: __init__.py  article.py  code_sample.py  enums.py  evaluation.py  jtbd.py
src/foundry_eval/orchestration/: __init__.py  batch_processor.py  progress.py  runner.py  state.py
src/foundry_eval/output/: __init__.py  csv_writer.py  markdown_writer.py
src/foundry_eval/output/templates/: report.md.j2
src/foundry_eval/utils/: __init__.py  file_utils.py  logging.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_article.md  sample_toc.yml
tests/unit/: test_context.py  test_evaluators.py  test_llm.py  test_orchestration.py  test_output.py  test_phase6.py
